--- a/README.html
+++ b/README.html
@@ -1,12 +1,8 @@
 
-First Header | Second Header
------------- | -------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
 
 
-[mindset] (https://github.com/talahajeer/reading_notes/blob/main/read01a.html)
-
+1. [mindset] (https://github.com/talahajeer/reading_notes/blob/main/read01a.html)
+2. [About Git] (https://github.com/talahajeer/reading_notes/blob/main/read02b.html)
 
 And at last, I am Tala Hajeer, Iam a holder of bachelor degree in Architectural Enigneering. Eager to learn about coding and software developmet and find the meeting points between it and my original field.
 [Tala Hajeer](https://github.com/talahajeer) 
